--- a/src/responsive.css
+++ b/src/responsive.css
@@ -231,10 +231,11 @@
     .crop-img-container{
         max-height: 280px;
     }
+    .ReactCrop__child-wrapper>img, .ReactCrop__child-wrapper>video,
     .crop-img-container img{
         max-width: 250px;
-        max-height: 250px;
-        margin: auto !important;
+        max-height: 250px !important;
+        /* margin: auto !important; */
     }
 }
 
